--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	</head>
 	
 	<body>
+		<div class="player_selection">
+			<button id="rock">Rock</button>
+			<button id="paper">Paper</button>
+			<button id="sissors">Sissors</button>
+		</div>
+		<div class="score">
+			<p>The Score is:</p>
+		</div>
 	</body>
 
 	<script src="script.js"></script>
