--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div class="player_selection">
 			<button id="rock">Rock</button>
 			<button id="paper">Paper</button>
-			<button id="sissors">Sissors</button>
+			<button id="scissors">Sissors</button>
 		</div>
 		<div class="score">
 			<p>The Score is:</p>
