added message and score divs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 			<button id="paper">Paper</button>
 			<button id="scissors">Sissors</button>
 		</div>
-		<div class="score">
-			<p>The Score is:</p>
-		</div>
+		<div class="message"></div>
+		<div class="score"></div>
 	</body>
 
 	<script src="script.js"></script>
