-minor fixes in html -changed console outputs to dom output -moved game logic to event listener callback

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<button id="paper">Paper</button>
 			<button id="scissors">Sissors</button>
 		</div>
-		<div class="message"></div>
-		<div class="score"></div>
+		<div id="message"></div>
+		<div id="score"></div>
 	</body>
 
 	<script src="script.js"></script>
