--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 			<button id="paper">Paper</button>
 			<button id="scissors">Sissors</button>
 		</div>
-		<div id="message"></div>
-		<div id="score"></div>
+		<div id="message">
+			Click on one of the three buttons to start a game.<br>
+			First to get to 5 points wins the game.
+		</div>
+		<div id="score">Player-Computer: 0-0</div>
 	</body>
 
 	<script src="script.js"></script>
