--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Rock-Paper-Scissors</title>
 	</head>
 
 	<style>
 		body {
 			background-color: #f8fff8;
-			font-family: Arial, Helvetica, sans-serif;
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; /* github system font stack */
 			font-size: xx-large;
 			text-align: center;
 		}
@@ -44,15 +45,15 @@
 		<div id="score">Player-Computer: 0-0</div>
 		<div class="player_selection">
 			<button id="rock" class="button">
-				✊
+				&#x270A
 				<span>Rock</span>
 			</button>
 			<button id="paper" class="button">
-				✋
+				&#x270B
 				<span>Paper</span>
 			</button>
 			<button id="scissors" class="button">
-				✌️
+				&#x270C
 				<span>Scissors</span>
 			</button>
 		</div>
